deploy/kubernetes/etcd-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: etcd
    namespace: config-system
spec:
    serviceName: etcd-service
    replicas: 3
    selector:
        matchLabels:
            app: etcd
    template:
        metadata:
            labels:
                app: etcd
        spec:
            containers:
                - name: etcd
                  image: bitnami/etcd:latest
                  ports:
                      - containerPort: 2379
                  volumeMounts:
                      - name: etcd-data
                        mountPath: /bitnami/etcd
    volumeClaimTemplates:
        - metadata:
              name: etcd-data
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 1Gi
