deploy/kubernetes/etcd-service.yml
apiVersion: v1
kind: Service
metadata:
    name: etcd-service
    namespace: config-system
spec:
    clusterIP: None
    ports:
        - port: 2379
    selector:
        app: etcd
