deploy/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
    name: config-service
    namespace: config-system
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 8000
    selector:
        app: config-service
